<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    style="@style/RegUptActivity">
    
   	<com.markupartist.android.widget.ActionBar
      android:id="@+id/actionbar_client_register"
      style="@style/ActionBar" />    
    
    <TextView 
		android:id="@+cad_cliente/lbl_nome_cliente"
		android:text="@string/lbl_cliente"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		style="@style/Label"
	/>
    
   <EditText
       android:id="@+cad_cliente/txt_nome_cliente"
	   style="@style/InputName"
       android:layout_width="fill_parent"
	   android:layout_height="wrap_content"
	   android:maxLength="30"
       />
  
    <TextView 
        android:id="@+cad_cliente/lbl_endereco_cliente"
		android:text="@string/lbl_endereco"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		style="@style/Label"
	/>
    
   <EditText 
       android:id="@+cad_cliente/txt_endereco_cliente"
        style="@style/Input"
       android:layout_width="fill_parent"
	   android:layout_height="wrap_content"
	   android:maxLength="50"
       />   
   
   
    <TextView 
        android:id="@+cad_cliente/lbl_telefone_cliente"
		android:text="@string/lbl_telefone"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		style="@style/Label"
	/>
    
   <EditText 
       android:id="@+cad_cliente/txt_telefone_cliente"
       style="@style/Input"
       android:inputType="phone"
       android:layout_width="fill_parent"
	   android:layout_height="wrap_content"
	   android:maxLength="10"
       />
   
    <TextView 
        android:id="@+cad_cliente/lbl_celular_cliente"
		android:text="@string/lbl_celular"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		style="@style/Label"
	/>
    
   <EditText 
       android:id="@+cad_cliente/txt_celular_cliente"
       style="@style/InputName"
       android:inputType="phone"
       android:layout_width="fill_parent"
	   android:layout_height="wrap_content"
	   android:maxLength="10"
       />   
   
    <TextView 
        android:id="@+cad_cliente/lbl_email_cliente"
		android:text="@string/lbl_email"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		style="@style/Label"
	/>
    
   <EditText 
       android:id="@+cad_cliente/txt_email_cliente"
       style="@style/InputName"
       android:inputType="textEmailAddress"
       android:layout_width="fill_parent"
	   android:layout_height="wrap_content"
	   android:maxLength="100"
       />    
   
	<Button 
       android:text="@string/btn_register"
       android:id="@+cad_cliente/btn_cadastrar" 
       android:onClick="register"
	   style="@style/RegisterUpdateButton"
	   android:background="@drawable/custom_button"
       />
    
    
</LinearLayout>