<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/RegUptActivity">

    <com.markupartist.android.widget.ActionBar
		android:id="@+id/actionbar_indeed_search"
		style="@style/ActionBar" />
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp">
	
		<EditText 
			android:id="@+id/txt_termo_filtro_indeed_search"
			android:layout_width="250dp"
			android:layout_height="wrap_content"
			android:inputType="text"
			android:singleLine="true"
			android:hint="@string/txt_term_hint"/>
		
		<EditText 
			android:id="@+id/txt_localizacao_filtro_indeed_search"
			android:layout_width="250dp"
			android:layout_height="wrap_content"
			android:inputType="text"
			android:singleLine="true"
			android:hint="@string/txt_location_hint"/>
        	
		<Button 
		    android:id="@+id/btn_buscar_filtro_indeed_search"
		    android:text="@string/btn_search"
		    android:background="@drawable/custom_button"
		    style="@style/RegisterUpdateButton"
		    android:onClick="efetuarBusca"
		    />
		
    </LinearLayout>
    

	    	    
	<ListView
		android:id="@+id/indeed_search_list"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:scrollbars="vertical" 
		android:divider="@drawable/listview_divider"
	/>    	            
	    
</LinearLayout>